--- a/MvcProjeKampi/Views/AdminCategory/Index.cshtml
+++ b/MvcProjeKampi/Views/AdminCategory/Index.cshtml
@@ -26,5 +26,5 @@
         </tr>
     }
 </table>
-<a href="/Category/CategoryAdd" class="btn btn-success">Yeni Kategori Ekle</a>
+<a href="/AdminCategory/CategoryAdd" class="btn btn-success">Yeni Kategori Ekle</a>
 
