--- a/MvcProjeKampi/Views/Writer/Index.cshtml
+++ b/MvcProjeKampi/Views/Writer/Index.cshtml
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </div>
-        <a href="/Writer/WriterAdd" class="btn btn-primary">Yeni Kategori Ekle</a>
+        <a href="/Writer/WriterAdd" class="btn btn-primary">Yeni Yazar Ekle</a>
         <!-- /.card -->
     </section>
     <!-- /.content -->
