--- a/MvcProjeKampi/Views/Writer/WriterAdd.cshtml
+++ b/MvcProjeKampi/Views/Writer/WriterAdd.cshtml
@@ -23,6 +23,12 @@
     <br />
     @Html.Label("Yazar Resim")
     @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+    <br />
+    @Html.Label("Yazar Başlık")
+    @Html.TextBoxFor(x => x.WriterTitle, new { @class = "form-control" })
+    <br />
+    @Html.Label("Yazar Hakkında")
+    @Html.TextBoxFor(x => x.WriterAbout, new { @class = "form-control" })
 
     <br />
     <button class="btn btn-primary">Kaydet</button>
