--- a/MvcProjeKampi/Views/Writer/WriterUpdate.cshtml
+++ b/MvcProjeKampi/Views/Writer/WriterUpdate.cshtml
@@ -6,25 +6,30 @@
 <br />
 <h2>Yazar Düzenleme sayfası</h2>
 <div>
-@using (Html.BeginForm("WriterUpdate","Writer",FormMethod.Post))
-            {
-    @Html.HiddenFor(x=>x.WriterID)
-    @Html.Label("Yazar Adı")
-    @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.WriterName)
-    <br />
-    @Html.Label("Yazar Soyadı")
-    @Html.TextBoxFor(x => x.WriterSurName, new { @class = "form-control" })
-    @Html.ValidationMessageFor(x => x.WriterSurName)
-    <br />
-    @Html.Label("Yazar Mail")
-    @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
-    <br />
-    @Html.Label("Yazar Resim")
-    @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+    @using (Html.BeginForm("WriterUpdate", "Writer", FormMethod.Post))
+    {
+        @Html.HiddenFor(x => x.WriterID)
+        @Html.Label("Yazar Adı")
+        @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterName)
+        <br />
+        @Html.Label("Yazar Soyadı")
+        @Html.TextBoxFor(x => x.WriterSurName, new { @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.WriterSurName)
+        <br />
+        @Html.Label("Yazar Mail")
+        @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
+        <br />
+        @Html.Label("Yazar Resim")
+        @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+        @Html.Label("Yazar Başlık")
+        @Html.TextBoxFor(x => x.WriterTitle, new { @class = "form-control" })
+        <br />
+        @Html.Label("Yazar Hakkında")
+        @Html.TextBoxFor(x => x.WriterAbout, new { @class = "form-control" })
 
-    <br />
-    <button class="btn btn-primary">Kaydet</button> 
+        <br />
+        <button class="btn btn-primary">Kaydet</button>
     }
 </div>
            
