--- a/MvcProjeKampi/Views/Heading/Index.cshtml
+++ b/MvcProjeKampi/Views/Heading/Index.cshtml
@@ -6,7 +6,7 @@
 }
 @{ string color = "";
 }
-}
+
     <!DOCTYPE html>
     <html>
 
@@ -16,7 +16,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1>Projects</h1>
+                        <h1>Başlık Listesi</h1>
                     </div>
                 </div>
             </div><!-- /.container-fluid -->
@@ -108,10 +108,10 @@
                                         <span class="@color">@item.Category.CategoryName</span>
                                     </td>
                                     <td class="project-actions text-right">
-                                        <a class="btn btn-primary btn-sm" href="#">
+                                        <a class="btn btn-primary btn-sm" href="/Content/ContentByHeading/@item.HeadingID">
                                             <i class="fas fa-folder">
                                             </i>
-                                            İçerik
+                                           Yazılar
                                         </a>
                                         <a class="btn btn-info btn-sm" href="#">
                                             <i class="fas fa-pencil-alt">
@@ -128,6 +128,7 @@
                             }
                         </tbody>
                     </table>
+                    
                 </div>
                 <!-- /.card-body -->
             </div>
@@ -135,7 +136,7 @@
         </section>
     </body>
 </html>
-
+    <a href="/Heading/HeadingAdd" class="btn btn-info">Yeni başlık Girişi</a>
 
 
 @*<h2>Index</h2>
