--- a/MvcProjeKampi/Views/Heading/Index.cshtml
+++ b/MvcProjeKampi/Views/Heading/Index.cshtml
@@ -113,7 +113,7 @@
                                             </i>
                                            Yazılar
                                         </a>
-                                        <a class="btn btn-info btn-sm" href="#">
+                                        <a class="btn btn-info btn-sm" href="/Heading/HeadingUpdate/@item.HeadingID">
                                             <i class="fas fa-pencil-alt">
                                             </i>
                                             Düzenle
