--- a/MvcProjeKampi/Views/Heading/Index.cshtml
+++ b/MvcProjeKampi/Views/Heading/Index.cshtml
@@ -49,6 +49,9 @@
                                 <th style="width: 30%">
                                     Oluşturan Yazar
                                 </th>
+                                <th style="width:20%">
+                                    Durum
+                                </th>
                                 <th style="width: 8%" class="text-center">
                                     Kategori
                                 </th>
@@ -104,6 +107,9 @@
                                             </li>
                                         </ul>
                                     </td>
+                                    <td>
+                                        @item.HeadingStatus
+                                    </td>
                                     <td class="project-state">
                                         <span class="@color">@item.Category.CategoryName</span>
                                     </td>
@@ -118,7 +124,7 @@
                                             </i>
                                             Düzenle
                                         </a>
-                                        <a class="btn btn-danger btn-sm" href="#">
+                                        <a class="btn btn-danger btn-sm" href="/Heading/HeadingDelete/@item.HeadingID">
                                             <i class="fas fa-trash">
                                             </i>
                                             Sil
