--- a/MvcProjeKampi/Views/Contact/Index.cshtml
+++ b/MvcProjeKampi/Views/Contact/Index.cshtml
@@ -87,7 +87,8 @@
                                             <b>@item.UserName</b>@item.Message
                                         </td>
                                         <td class="mailbox-attachment"></td>
-                                        <td class="mailbox-date">5 mins ago</td>
+                                          
+                                        <td class="mailbox-date">@(((DateTime)item.ContactDate).ToString("dd-MM-yyyy"))</td>
                                     </tr>
                                     }
                                 </tbody>
