--- a/MvcProjeKampi/Views/Shared/_WriterLayout.cshtml
+++ b/MvcProjeKampi/Views/Shared/_WriterLayout.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>AdminLTE 3 | Dashboard 3</title>
+    <title>Mvc Proje Kampı</title>
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="~/Templates/AdminLTE-3.0.4/plugins/fontawesome-free/css/all.min.css">
     <!-- IonIcons -->
@@ -39,7 +39,7 @@ to get the desired effect
             <a href="index3.html" class="brand-link">
                 <img src="~/Templates/AdminLTE-3.0.4/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">Yazar Paneli</span>
             </a>
             <!-- Sidebar -->
             <div class="sidebar">
@@ -77,7 +77,7 @@ to get the desired effect
                     
                         
                         <li class="nav-item has-treeview">
-                            <a href="/Contact/Index" class="nav-link">
+                            <a href="/WriterPanelMessage/SendBox" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
                                 <p>
                                     Mesajlar
