--- a/MvcProjeKampi/Views/WriterPanelMessage/MessageListMenu.cshtml
+++ b/MvcProjeKampi/Views/WriterPanelMessage/MessageListMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="col-md-3">
-    <a href="/Message/NewMessage" class="btn btn-primary btn-block mb-3">Yeni Mesaj Oluştur</a>
+    <a href="/WriterPanelMessage/NewMessage" class="btn btn-primary btn-block mb-3">Yeni Mesaj Oluştur</a>
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">Seçenekler</h3>
@@ -19,7 +19,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/WrirtePanelMessage/SendBox" class="nav-link">
+                    <a href="/WriterPanelMessage/SendBox" class="nav-link">
 
                         <i class="far fa-envelope"></i> Gönderilen Mesajlar
                         <span class="badge bg-primary float-right">@ViewBag.v1</span>
